--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -1,12 +1,12 @@
 {
   "Error.Passport.Password.Invalid": "The provided password is invalid!",
-  "Error.Passport.Password.Wrong": "Whoa, that password wasn't quite right!",
+  "Error.Passport.Password.Wrong": "Hmm, that password doesn't seem right",
   "Error.Passport.Password.NotSet": "Oh no, you haven't set a password yet!",
-  "Error.Passport.Username.NotFound": "Uhm, what's your name again?",
+  "Error.Passport.Username.NotFound": "Can't seem to find you, try again?",
   "Error.Passport.User.Exists": "This username is already taken.",
-  "Error.Passport.Email.NotFound": "That email doesn't seem right",
-  "Error.Passport.Email.Missing": "You need to supply an email-address for verification",
-  "Error.Passport.Email.Exists": "This email already exists. So try logging in.",
+  "Error.Passport.Email.NotFound": "Couldn't find that email",
+  "Error.Passport.Email.Missing": "You need to supply an email address for verification",
+  "Error.Passport.Email.Exists": "This email already exists, try logging in!",
   "Error.Passport.Username.Missing": "You need to supply a username",
   "Error.Passport.Password.Missing": "Oh no, you haven't set a password yet!",
   "Error.Passport.Generic": "Snap. Something went wrong with authorization."
